minor refactorings
git-svn-id: https://www.brockmann-consult.de/svn/os/beam-4.x/trunk@90 d90d2d48-2b33-0410-a973-e72f85796a02